--- a/Polynomial_zeta_moments.ipynb
+++ b/Polynomial_zeta_moments.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "Sébastien DARSES - Erwan HILLION\n",
     "\n",
-    "We want to check for some values of $N$ the main formula we proved in our paper:\n",
+    "We want to check for some values of $N$ the main formula we proved in our [our paper](https://arxiv.org/pdf/2209.10990.pdf):\n",
     "\n",
     "\\begin{eqnarray}\n",
     "\\int_{-\\infty}^\\infty t^{2N}  \\left|\\Gamma\\cdot\\zeta\\left(\\frac{1}{2}+it\\right)\\right|^2 dt  & = & \n",
